--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My first app</title>
+	<title>LinkChat</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet"/>
 	<link href="https://fonts.googleapis.com/css?family=Bowlby+One+SC" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Russo+One" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body style="margin: 0; font-family: Roboto; padding:0">
 <div id="root"></div>
-<script src="/bundle.js" type="text/javascript"></script>
+<script src="./bundle.js" type="text/javascript"></script>
 <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
